schema/testdata/validation_jobs_attributes/schema.keel
job MyJob1 {
    inputs {
        myField Text
    }
}

job MyJob2 {
   inputs {
      myField Text
    }

    @schedule("* * * * *")  
}

job MyJob3 {
    @permission(roles: [Admin])
    @schedule("* * * * *")  
}

role Admin {}